crates/iota/tests/snapshots/shell_tests__iota_move_new_tests__new_files.sh.snap
---
source: crates/iota/tests/shell_tests.rs
---
----- script -----
# Copyright (c) Mysten Labs, Inc.
# Modifications Copyright (c) 2025 IOTA Stiftung
# SPDX-License-Identifier: Apache-2.0

# basic test that iota move new outputs correct files
iota move new example
echo ==== files in project ====
ls -A example
echo ==== files in sources ====
ls -A example/sources
echo ==== files in tests =====
ls -A example/tests

----- results -----
success: true
exit_code: 0
----- stdout -----
==== files in project ====
.gitignore
Move.toml
sources
tests
==== files in sources ====
example.move
==== files in tests =====
example_tests.move

----- stderr -----
